--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <meta charset="utf-8">
@@ -21,8 +22,11 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
     <div class="site-wrap">
+
         <div class="site-mobile-menu">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
@@ -31,14 +35,21 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
+
+
+
+
         <header class="site-navbar py-3" role="banner">
+
             <div class="container-fluid">
                 <div class="row align-items-center">
+
                     <div class="col-6 col-xl-2" data-aos="fade-down">
                         <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
-                   <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
+                    <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
+
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li class="has-children">
@@ -49,21 +60,23 @@
                                         <li><a href="#">Alh ar'ray</a></li>
                                         <li><a href="#">Segacite</a></li>
                                         <li><a href="#">Vyaktitvam</a></li>
+                                        
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
+                                <li><a href="services.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
-                                            <a href="to.html">Contact</a>
+                                            <a href="#">Contact</a>
                                             <ul class="dropdown">
-                                                <li><a href="evco.html">Event Co-ordinators</a></li>
-                                                <li><a href="dev.html">Developers</a></li>
-                                                <li><a href="contact.html">Send Query</a></li>
+                                                <li><a href="#">For Events</a></li>
+                                                <li><a href="#">Developers</a></li>
+                                                <li><a href="#">US</a></li>
                                             </ul>
                                         </li>
                             </ul>
                         </nav>
                     </div>
+
                     <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -81,11 +94,18 @@
                                 </li>
                             </ul>
                         </div>
+
                         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+
                     </div>
+
                 </div>
             </div>
+
         </header>
+
+
+
         <div class="container-fluid" data-aos="fade" data-aos-delay="500">
             <div class="swiper-container images-carousel">
                 <div class="swiper-wrapper">
@@ -143,23 +163,30 @@
                             <img src="images/img_6.jpg" alt="Image">
                         </div>
                     </div>
-                    <!--- <div class="swiper-slide">
+                    <!–– <div class="swiper-slide">
                     <div class="image-wrap">
                         <div class="image-info">
                             <h2 class="mb-3">Travel</h2>
                             <a href="single.html" class="btn btn-outline-white py-2 px-4">Know More</a>
-                        </div>
+                        </div> ––>
                         <img src="images/img_7.jpg" alt="Image">
                     </div>
-                </div>--->
+                </div>
             </div>
+
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
             <div class="swiper-scrollbar"></div>
         </div>
     </div>
+
+
+
+
+
     </div>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
@@ -172,14 +199,20 @@
     <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/aos.js"></script>
+
     <script src="js/picturefill.min.js"></script>
     <script src="js/lightgallery-all.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+
     <script src="js/main.js"></script>
+
     <script>
         $(document).ready(function() {
             $('#lightgallery').lightGallery();
         });
+
     </script>
+
 </body>
+
 </html>
